--- a/visualizacao.ipynb
+++ b/visualizacao.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5f9866b7",
    "metadata": {},
    "outputs": [
@@ -23,23 +23,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-f73bff33e0ef46f5a31620645a85e924.vega-embed {\n",
+       "  #altair-viz-cc6f312eb8eb4a929d5646996e6f496b.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-f73bff33e0ef46f5a31620645a85e924.vega-embed details,\n",
-       "  #altair-viz-f73bff33e0ef46f5a31620645a85e924.vega-embed details summary {\n",
+       "  #altair-viz-cc6f312eb8eb4a929d5646996e6f496b.vega-embed details,\n",
+       "  #altair-viz-cc6f312eb8eb4a929d5646996e6f496b.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-f73bff33e0ef46f5a31620645a85e924\"></div>\n",
+       "<div id=\"altair-viz-cc6f312eb8eb4a929d5646996e6f496b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f73bff33e0ef46f5a31620645a85e924\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f73bff33e0ef46f5a31620645a85e924\");\n",
+       "    if (outputDiv.id !== \"altair-viz-cc6f312eb8eb4a929d5646996e6f496b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-cc6f312eb8eb4a929d5646996e6f496b\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -87,7 +87,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}, \"axis\": {\"labelFontSize\": 12, \"titleFontSize\": 14}}, \"data\": {\"name\": \"data-643a52f00a3434a0f5968ec18a6ea0c9\"}, \"mark\": {\"type\": \"bar\", \"opacity\": 0.7}, \"encoding\": {\"color\": {\"field\": \"Categoria\", \"type\": \"nominal\"}, \"column\": {\"field\": \"Categoria\", \"type\": \"nominal\"}, \"x\": {\"bin\": {\"maxbins\": 30}, \"field\": \"Valor\", \"title\": \"Valor da Solu\\u00e7\\u00e3o\", \"type\": \"quantitative\"}, \"y\": {\"aggregate\": \"count\", \"title\": \"Frequ\\u00eancia\", \"type\": \"quantitative\"}}, \"height\": 300, \"title\": \"Histograma Comparativo das Solu\\u00e7\\u00f5es (Melhor vs Pior vs M\\u00e9dio)\", \"width\": 150, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-643a52f00a3434a0f5968ec18a6ea0c9\": [{\"Categoria\": \"Melhor\", \"Valor\": 2193}, {\"Categoria\": \"Melhor\", \"Valor\": 2183}, {\"Categoria\": \"Melhor\", \"Valor\": 2193}, {\"Categoria\": \"Melhor\", \"Valor\": 2189}, {\"Categoria\": \"Melhor\", \"Valor\": 2190}, {\"Categoria\": \"Melhor\", \"Valor\": 2189}, {\"Categoria\": \"Melhor\", \"Valor\": 2192}, {\"Categoria\": \"Melhor\", \"Valor\": 2189}, {\"Categoria\": \"Melhor\", \"Valor\": 2191}, {\"Categoria\": \"Melhor\", \"Valor\": 2185}, {\"Categoria\": \"Melhor\", \"Valor\": 2186}, {\"Categoria\": \"Melhor\", \"Valor\": 2191}, {\"Categoria\": \"Melhor\", \"Valor\": 2189}, {\"Categoria\": \"Melhor\", \"Valor\": 2180}, {\"Categoria\": \"Melhor\", \"Valor\": 2183}, {\"Categoria\": \"Pior\", \"Valor\": 1917}, {\"Categoria\": \"Pior\", \"Valor\": 1921}, {\"Categoria\": \"Pior\", \"Valor\": 1919}, {\"Categoria\": \"Pior\", \"Valor\": 1943}, {\"Categoria\": \"Pior\", \"Valor\": 1887}, {\"Categoria\": \"Pior\", \"Valor\": 1906}, {\"Categoria\": \"Pior\", \"Valor\": 1922}, {\"Categoria\": \"Pior\", \"Valor\": 1917}, {\"Categoria\": \"Pior\", \"Valor\": 1903}, {\"Categoria\": \"Pior\", \"Valor\": 1918}, {\"Categoria\": \"Pior\", \"Valor\": 1892}, {\"Categoria\": \"Pior\", \"Valor\": 1921}, {\"Categoria\": \"Pior\", \"Valor\": 1931}, {\"Categoria\": \"Pior\", \"Valor\": 1915}, {\"Categoria\": \"Pior\", \"Valor\": 1925}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}, {\"Categoria\": \"M\\u00e9dio\", \"Valor\": 2188}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-77bbd3282d71ecbe215ce8cd64f1984d\"}, \"mark\": {\"type\": \"bar\", \"opacity\": 0.7}, \"encoding\": {\"color\": {\"field\": \"TipoValor\", \"type\": \"nominal\"}, \"x\": {\"axis\": {\"labelAngle\": -45}, \"field\": \"Execucao\", \"title\": \"Execu\\u00e7\\u00e3o\", \"type\": \"nominal\"}, \"y\": {\"field\": \"Valor\", \"title\": \"Valor da Solu\\u00e7\\u00e3o\", \"type\": \"quantitative\"}}, \"height\": 400, \"title\": \"Compara\\u00e7\\u00e3o Melhor e Pior Valor por Execu\\u00e7\\u00e3o\", \"width\": 700, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-77bbd3282d71ecbe215ce8cd64f1984d\": [{\"Execucao\": 1, \"TipoValor\": \"MelhorValor\", \"Valor\": 2193}, {\"Execucao\": 2, \"TipoValor\": \"MelhorValor\", \"Valor\": 2183}, {\"Execucao\": 3, \"TipoValor\": \"MelhorValor\", \"Valor\": 2193}, {\"Execucao\": 4, \"TipoValor\": \"MelhorValor\", \"Valor\": 2189}, {\"Execucao\": 5, \"TipoValor\": \"MelhorValor\", \"Valor\": 2190}, {\"Execucao\": 6, \"TipoValor\": \"MelhorValor\", \"Valor\": 2189}, {\"Execucao\": 7, \"TipoValor\": \"MelhorValor\", \"Valor\": 2192}, {\"Execucao\": 8, \"TipoValor\": \"MelhorValor\", \"Valor\": 2189}, {\"Execucao\": 9, \"TipoValor\": \"MelhorValor\", \"Valor\": 2191}, {\"Execucao\": 10, \"TipoValor\": \"MelhorValor\", \"Valor\": 2185}, {\"Execucao\": 11, \"TipoValor\": \"MelhorValor\", \"Valor\": 2186}, {\"Execucao\": 12, \"TipoValor\": \"MelhorValor\", \"Valor\": 2191}, {\"Execucao\": 13, \"TipoValor\": \"MelhorValor\", \"Valor\": 2189}, {\"Execucao\": 14, \"TipoValor\": \"MelhorValor\", \"Valor\": 2180}, {\"Execucao\": 15, \"TipoValor\": \"MelhorValor\", \"Valor\": 2183}, {\"Execucao\": 1, \"TipoValor\": \"PiorValor\", \"Valor\": 1917}, {\"Execucao\": 2, \"TipoValor\": \"PiorValor\", \"Valor\": 1921}, {\"Execucao\": 3, \"TipoValor\": \"PiorValor\", \"Valor\": 1919}, {\"Execucao\": 4, \"TipoValor\": \"PiorValor\", \"Valor\": 1943}, {\"Execucao\": 5, \"TipoValor\": \"PiorValor\", \"Valor\": 1887}, {\"Execucao\": 6, \"TipoValor\": \"PiorValor\", \"Valor\": 1906}, {\"Execucao\": 7, \"TipoValor\": \"PiorValor\", \"Valor\": 1922}, {\"Execucao\": 8, \"TipoValor\": \"PiorValor\", \"Valor\": 1917}, {\"Execucao\": 9, \"TipoValor\": \"PiorValor\", \"Valor\": 1903}, {\"Execucao\": 10, \"TipoValor\": \"PiorValor\", \"Valor\": 1918}, {\"Execucao\": 11, \"TipoValor\": \"PiorValor\", \"Valor\": 1892}, {\"Execucao\": 12, \"TipoValor\": \"PiorValor\", \"Valor\": 1921}, {\"Execucao\": 13, \"TipoValor\": \"PiorValor\", \"Valor\": 1931}, {\"Execucao\": 14, \"TipoValor\": \"PiorValor\", \"Valor\": 1915}, {\"Execucao\": 15, \"TipoValor\": \"PiorValor\", \"Valor\": 1925}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -98,7 +98,25 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"resultados_aco.csv\")\n",
+    "\n",
+    "# Selecionar só colunas existentes para o gráfico\n",
+    "df_long = df.melt(id_vars=['Execucao'], value_vars=['MelhorValor', 'PiorValor'],\n",
+    "                  var_name='TipoValor', value_name='Valor')\n",
+    "\n",
+    "chart = alt.Chart(df_long).mark_bar(opacity=0.7).encode(\n",
+    "    x=alt.X('Execucao:N', title='Execução', axis=alt.Axis(labelAngle=-45)),\n",
+    "    y=alt.Y('Valor:Q', title='Valor da Solução'),\n",
+    "    color='TipoValor:N'\n",
+    ").properties(\n",
+    "    width=700,\n",
+    "    height=400,\n",
+    "    title='Comparação Melhor e Pior Valor por Execução'\n",
+    ")\n",
+    "\n",
+    "chart.show()"
+   ]
   }
  ],
  "metadata": {
